# trnr-dpf-template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  package-info.json  package-info.json.in
.github/workflows/: build.yml  build_dpf.yml  build_max.yml
common/: MeterBuffer.h
dsp/: DSP.cpp  DSP.hpp
plugins/: .clang-format
plugins/Template/: CMakeLists.txt  DistrhoPluginInfo.h  Makefile  TemplateArtwork.hpp  TemplatePlugin.cpp  TemplatePlugin.hpp  TemplateUI.cpp  TemplateUI.hpp  WaveformBuffer.h
plugins/Template/Artwork/src/: config.json
plugins/dpf/Template/: DistrhoPluginInfo.h  TemplateArtwork.hpp  TemplatePlugin.cpp  TemplatePlugin.hpp  TemplateUI.cpp  TemplateUI.hpp  WaveformBuffer.h
plugins/max/Template_tilde/: CMakeLists.txt  Template_tilde.cpp
plugins/max/trnr.core.template_tilde/: trnr.core.template_tilde.cpp
plugins/trnr.core.template_tilde/: .clang-format  CMakeLists.txt  trnr.core.template_tilde.cpp
